tests/baselines/reference/emitArrowFunctionWhenUsingArguments15.errors.txt
emitArrowFunctionWhenUsingArguments15.ts(2,9): error TS1100: Invalid use of 'arguments' in strict mode.
emitArrowFunctionWhenUsingArguments15.ts(4,15): error TS1100: Invalid use of 'arguments' in strict mode.
emitArrowFunctionWhenUsingArguments15.ts(5,22): error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.


==== emitArrowFunctionWhenUsingArguments15.ts (3 errors) ====
    function f() {
        var arguments = "hello";
            ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        if (Math.random()) {
            const arguments = 100;
                  ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
            return () => arguments;
                         ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.
        }
    }